# Salary_Canada

./: README.md  environment.yml  output.txt  pyproject.toml  requirements.txt  sample.env  setup.py
.github/workflows/: cd.yml
data/: salary_guide.pkl
docs/: README.md
docs/notebook/: strategy.ipynb
sandbox/: salary_exploratio.ipynb  salary_exploration.ipynb  strategy.ipynb
sandbox/.ipynb_checkpoints/: salary_exploration-checkpoint.ipynb
src/: __init__.py  config.py  data.py  indicators.py  pdf.py  pdf_salary_scraper.py  process.py  strategy.py
web/: index.html
wiki/: JUPYTERLAB.md
